welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:28: error: value vSteps is not a member of Int
for(i <- 1 vSteps){
           ^